# BCGunet

./: .gitignore  README.md  analysis.ipynb  bcgrun.py  bcgrun_web.py  bcgunet_ana.ipynb  bcgunet_run.ipynb  bcgunet_test.ipynb  colab.ipynb  pyproject.toml  requirements.txt  spaces.yml
.github/workflows/: hf.yml  python-app-all_main.yml
bcgunet/: bcgunet.py  unet.py  unet1d-simple.ipynb
bigru/: bcgbigru.py  bigru-debug.ipynb  bigru.py
images/: alpha_annot.psd
matlab/: calc_alpha_unet.m  read_eeg.m
scripts/: sync.sh
unet/: bcgunet.py  unet-debug.ipynb  unet.py
